# ChangeLog for vmware overlay
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $ Id: $

  19 Oct 2008; Mike Auty <ikelos@gentoo.org>
  app-emulation/vmware-player/vmware-player-2.5.0.118166.ebuild,
  app-emulation/vmware-workstation/vmware-workstation-6.5.0.118166.ebuild:
  Add binchecks to cut down the huge amount of wasted time. Fix up desktop
  files for workstation.

  19 Oct 2008; Mike Auty <ikelos@gentoo.org>
  app-emulation/vmware-modules/Manifest:
  Fix up manifest for amd64 vmware-modules-1.0.0.23.

  19 Oct 2008; Mike Auty <ikelos@gentoo.org>
  app-emulation/vmware-player/vmware-player-2.5.0.118166.ebuild,
  app-emulation/vmware-workstation/vmware-workstation-6.5.0.118166.ebuild:
  Ensure python requires sqlite.

  19 Oct 2008; Mike Auty <ikelos@gentoo.org>
  +app-emulation/vmware-player/files/2.5.0.118166/vmware-player.py.patch,
  +app-emulation/vmware-workstation/files/6.5.0.118166/vmware-player.py.patc
  h, +app-emulation/vmware-player/files/vmware-player-2.5.rc,
  app-emulation/vmware-workstation/files/vmware-workstation-6.5.0.118166-ins
  taller.patch,
  +app-emulation/vmware-workstation/files/6.5.0.118166/vmware-player-extras.
  py.patch,
  +app-emulation/vmware-workstation/files/vmware-workstation-6.5.rc,
  +app-emulation/vmware-player/files/2.5.0.118166/vmware-player-extras.py.pa
  tch,
  +app-emulation/vmware-workstation/files/6.5.0.118166/vmware-vix.py.patch,
  +app-emulation/vmware-workstation/files/6.5.0.118166/vmware-workstation.py
  .patch,
  +app-emulation/vmware-player/files/vmware-player-2.5.0.118166-installer.pa
  tch, +app-emulation/vmware-player/files/helpers/module_patcher.sh,
  +app-emulation/vmware-player/files/helpers/unbundler.sh,
  +app-emulation/vmware-player/files/helpers/vmware-config.sh,
  +app-emulation/vmware-workstation/files/helpers/module_patcher.sh,
  +app-emulation/vmware-workstation/files/helpers/unbundler.sh,
  +app-emulation/vmware-workstation/files/helpers/vmware-config.sh,