@@ -2,6 +2,11 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $ Id: $
 
+  20 Oct 2008; Mike Auty <ikelos@gentoo.org>
+  app-emulation/vmware-player/vmware-player-2.5.0.118166.ebuild,
+  app-emulation/vmware-workstation/vmware-workstation-6.5.0.118166.ebuild:
+  Fix up vmware-player-2.5/vmware-workstation-6.5 lxml dependency.
+
   19 Oct 2008; Mike Auty <ikelos@gentoo.org>
   app-emulation/vmware-player/vmware-player-2.5.0.118166.ebuild,
   app-emulation/vmware-workstation/vmware-workstation-6.5.0.118166.ebuild:
